made chat overflow-x stop

--- a/app/public/style.css
+++ b/app/public/style.css
@@ -5,19 +5,19 @@
 }
 
 body,html {
-    width: 100%;
+    max-width: 100%;
     height: 100%;
 }
 
 /*index */
 
 h1 {
-    margin-top: 20px;
+    margin-top: 10px;
     padding: 10px;
     text-align: center;
 }
 .container {
-    margin-top:10%;
+    margin-top:5%;
     text-align: center;
 }
 
@@ -53,6 +53,7 @@ nav {
     margin-top: 5px;
     display: flex;
     justify-content: space-around;
+
 }
 
 nav p {
@@ -71,6 +72,10 @@ a {
     color: white;
 }
 
+a:hover{
+    text-decoration: none;
+}
+
 #chat-box {
     width: 60%;
     margin: 0 auto;
@@ -81,16 +86,17 @@ a {
 
 #msg-box{
     height: 80vh;
-    border-top: 1px solid pink;
 }
 #msg {
     list-style: none;
     height: 80vh;
+    overflow-x: visible;
     overflow-y: scroll;
 }
 
 
 #msg li {
+    width: auto;
     padding: 2px;
 }
 .user {
